# cuda-insight

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  generate_plots.py  prompt.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: run_all.py
cuda_insight/: __init__.py  analyzer.py  cli.py  compiler.py  ncu_parser.py  profiler.py  ptx_annotator.py  reporter.py  suggestions.py  torch_ext.py
cuda_insight/templates/: report_template.html
cuda_insight/utils/: __init__.py  gpu_info.py  perf_model.py
docs/: contributing_kernels.md  getting_started.md  metrics_explained.md  roofline_model.md
examples/: profile_matmul.py
kernels/flash_attention_minimal/: README.md  flash_attn_v1.cu
kernels/matmul/: README.md  cublas_ref.cu  naive.cu  tiled.cu
kernels/quantization/: README.md  int8_gemm.cu
kernels/reduction/: README.md  atomic.cu  block_reduce.cu  warp_reduce.cu
kernels/softmax/: README.md  naive.cu  online_softmax.cu
tests/: test_analyzer.py  test_compiler.py  test_gpu_info.py  test_perf_model.py  test_profiler.py  test_reporter.py  test_skeleton.py  test_suggestions.py  test_torch_ext.py
