[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-insight"
version = "0.1.0"
description = "A CUDA Kernel Profiling, Debugging & Optimization Toolkit for Deep Learning Researchers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Paramveer Singh"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
viz = [
    "matplotlib>=3.7"
]
llm = [
    "anthropic>=0.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
include = ["cuda_insight*"]

[project.scripts]
cuda-insight = "cuda_insight.cli:cli"
